--- a/DiSessaJ_Arrays.ipynb
+++ b/DiSessaJ_Arrays.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4  39.858408 -104.667002  13781  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "       [211, 212, 213, 214, 215, 216]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "(12, 6)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,16 +220,12 @@
    "source": [
     "# 1 Shape\n",
     "\n",
-    "sh = nparr.shape\n",
-    "sh\n",
-    "\n",
-    "### Question:\n",
-    "### Should I create a variable name like here or just get the output??"
+    "nparr.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +234,7 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +256,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +278,7 @@
        "20.78"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The maximum value in nparr is the 72nd number at position 71.\n"
+      "The maximum value in nparr is at position 71.\n"
      ]
     }
    ],
@@ -310,22 +306,32 @@
     "# 3 Position of Max Value\n",
     "\n",
     "maxpos = np.argmax(nparr)\n",
-    "maxpos1 = maxpos + 1\n",
-    "print(f\"The maximum value in nparr is the {maxpos1}nd number at position {maxpos}.\")"
+    "print(f\"The maximum value in nparr is at position {maxpos}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array([[0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +365,7 @@
        "       [1, 1, 1, 1, 1, 1]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,32 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[145, 151, 157, 163, 169, 175, 181, 187, 193, 199, 205, 211],\n",
-       "       [146, 152, 158, 164, 170, 176, 182, 188, 194, 200, 206, 212],\n",
-       "       [147, 153, 159, 165, 171, 177, 183, 189, 195, 201, 207, 213],\n",
-       "       [148, 154, 160, 166, 172, 178, 184, 190, 196, 202, 208, 214],\n",
-       "       [149, 155, 161, 167, 173, 179, 185, 191, 197, 203, 209, 215],\n",
-       "       [150, 156, 162, 168, 174, 180, 186, 192, 198, 204, 210, 216]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.transpose(nparr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +399,7 @@
        "       [14.53, 14.56, 14.59, 14.63, 14.66, 14.7 ]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,14 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +445,7 @@
        "        1281]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +675,7 @@
        "[221 rows x 8 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -735,38 +709,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['iata', 'airport', 'city', 'state', 'country', 'lat', 'long', 'cnt']\n",
-      "iata\n",
-      "airport\n",
-      "city\n",
-      "state\n",
-      "country\n",
-      "lat\n",
-      "long\n",
-      "cnt\n"
+      "['iata', 'airport', 'city', 'state', 'country', 'lat', 'long', 'cnt']\n"
      ]
     }
    ],
    "source": [
-    "# 2 ?????????????????\n",
     "# 2 Print all Column Names\n",
-    "print(list(a_df.columns.values))\n",
     "\n",
-    "for col in a_df.columns:\n",
-    "    print(col)\n",
-    "    "
+    "print(list(a_df.columns.values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +799,7 @@
        "3   33.434167 -112.008056  17290  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,14 +807,12 @@
    "source": [
     "# 3 Print the 10th and 3rd rows of the dataset\n",
     "\n",
-    "a_df.loc[[10,3]]\n",
-    "\n",
-    "# wouldn't it be a_df.loc[[9,2]]??? technically"
+    "a_df.loc[[10,3]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -867,10 +827,9 @@
     "# 4 Which state had the 8th most traffic\n",
     "\n",
     "statecnt = a_df.groupby('state')['cnt'].sum().reset_index()\n",
-    "statecnt\n",
     "\n",
     "statesort = statecnt.sort_values('cnt', ascending = False)\n",
-    "statesort\n",
+    "\n",
     "\n",
     "trafficmost8 = statesort['cnt'].iloc[7]\n",
     "statemost8 = statesort['state'].iloc[7]\n",
@@ -881,67 +840,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TX was the state with the 2nd most traffic with 48,957 flights.\n"
+      "TX was the state with the 2nd most airports with 17 airports.\n"
      ]
     }
    ],
    "source": [
-    "# 5 Which state had the 2nd most traffic\n",
+    "# 5 Which state had the 2nd most number of airports\n",
     "\n",
-    "trafficmost2 = statesort['cnt'].iloc[1]\n",
-    "statemost2 = statesort['state'].iloc[1]\n",
-    "trafficmost2f = (f\"{trafficmost2:,}\")\n",
+    "stateairports = pd.DataFrame(a_df['state'].value_counts()).reset_index()\n",
+    "stateairports2 = stateairports['index'].iloc[1]\n",
+    "stateairportscnt = stateairports['state'].iloc[1]\n",
     "\n",
-    "print(f\"{statemost2} was the state with the 2nd most traffic with {trafficmost2f} flights.\")"
+    "print(f\"{stateairports2} was the state with the 2nd most airports with {stateairportscnt} airports.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6 Of the cities that have multiple airports, which one has the least total traffic for all airports?"
+    "# 6 Of the cities that have multiple airports, which one has the least total traffic for all airports?\n",
+    "#create abbr by city\n",
+    "#aggregate total traffic & how many different airports there are\n",
+    "#aggreagte airport(distinct) and count(sum)\n",
+    "#groupbind & agg\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<>:3: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "<>:3: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "<ipython-input-22-6a1a2c596ed6>:3: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "  maborderstates = statecnt.groupby('state'['VT']).sum('cnt')\n"
+      "Of the cities with multiple airports, New York has the least total traffic with 13,337 flights.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# 6 Of the cities that have multiple airports, which one has the least total traffic for all airports?\n",
+    "\n",
+    "amod = a_df\n",
+    "amod[\"city-state\"] = a_df['city'].astype(str) +\"-\"+ a_df[\"state\"]\n",
+    "amod['Freq'] = amod.groupby('city-state')['city-state'].transform('count')\n",
+    "amod1 = amod[amod[\"Freq\"] > 1]\n",
+    "\n",
+    "citycnt = amod1.groupby('city')['cnt'].sum().reset_index().sort_values(by=['cnt'], ascending = True)\n",
+    "\n",
+    "cityleast = citycnt['city'].iloc[0]\n",
+    "trafficleast = citycnt['cnt'].iloc[0]\n",
+    "trafficleastf = (f\"{trafficleast:,}\")\n",
+    "\n",
+    "print(f\"Of the cities with multiple airports, {cityleast} has the least total traffic with {trafficleastf} flights.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-6a1a2c596ed6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 7 What is the total airport traffic for all states that border the state of Massachusetts?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmaborderstates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstatecnt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'state'\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'VT'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cnt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All of the states that border MA had 22,007 total flights.\n"
      ]
     }
    ],
    "source": [
     "# 7 What is the total airport traffic for all states that border the state of Massachusetts?\n",
     "\n",
-    "maborderstates = statecnt.groupby('state'['VT']).sum('cnt')\n"
+    "maborderdb = statecnt[statecnt['state'].isin(['VT','NH','CT','NY','RI'])]\n",
+    "mabordertraffic = maborderdb['cnt'].sum()\n",
+    "mabordertrafficf = (f\"{mabordertraffic:,}\")\n",
+    "\n",
+    "print(f\"All of the states that border MA had {mabordertrafficf} total flights.\")"
    ]
   },
   {
@@ -962,8 +945,20 @@
     "https://stackoverflow.com/questions/16729574/how-can-i-get-a-value-from-a-cell-of-a-dataframe\n",
     "\n",
     "https://stackoverflow.com/questions/1823058/how-to-print-a-number-using-commas-as-thousands-separators\n",
-    "\n"
+    "\n",
+    "https://www.statology.org/pandas-add-count-column/\n",
+    "\n",
+    "https://sparkbyexamples.com/pandas/pandas-combine-two-columns-of-text-in-dataframe/\n",
+    "\n",
+    "https://stackoverflow.com/questions/37787698/how-to-sort-pandas-dataframe-from-one-column"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
